--- a/products/references.bib
+++ b/products/references.bib
@@ -1,5 +1,15 @@
 % Encoding: UTF-8
 
+Russell, J.B. and J.L. Rychlik, Factors that alter rumen microbial ecology. Science, 2001. 292(5519): p. 1119-22.
+2.	Lancaster, P.A., et al., Phenotypic and genetic relationships of residual feed intake with performance and ultrasound carcass traits in Brangus heifers1. Journal of Animal Science, 2009. 87(12): p. 3887-3896.
+3.	Hill, R.A., Feed Efficiency in the Beef Industry. 2012, Somerset, UNITED STATES: John Wiley & Sons, Incorporated.
+4.	Detweiler, R.A., et al., The impact of selection using residual average daily gain and marbling EPDs on growth, performance, and carcass traits in Angus steers1. J Anim Sci, 2019. 97(6): p. 2450-2459.
+5.	Council, N.R., Nutrient Requirements of Beef Cattle: Seventh Revised Edition: Update 2000. 2000, Washington, DC: The National Academies Press. 248.
+6.	Lourenco, J.M., et al., Analysis of the Rumen Microbiota of Beef Calves Supplemented During the Suckling Phase. Frontiers in Microbiology, 2019. 10(1131).
+7.	Rothrock, M.J., Jr., et al., A hybrid DNA extraction method for the qualitative and quantitative assessment of bacterial communities from poultry production samples. J Vis Exp, 2014(94).
+8.	Klindworth, A., et al., Evaluation of general 16S ribosomal RNA gene PCR primers for classical and next-generation sequencing-based diversity studies. Nucleic Acids Res, 2013. 41(1): p. e1.
+9.	Caporaso, J.G., et al., QIIME allows analysis of high-throughput community sequencing data. Nat Methods, 2010. 7(5): p. 335-6.
+
 @Article{Leek2015a,
   author          = {Leek, Jeffery T and Peng, Roger D},
   title           = {Statistics. What is the question?},
